May 27, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.10

May 25, 2011 - chris ---------------------------------------------------
o the cachesize is now more respected than before; while earlier releases
	frequently exceeded the cache when necessary, hamsterdb will now try to
	remain in the cache boundaries as good as possible

May 13, 2011 - chris ---------------------------------------------------
o added tools/ham_log - a tool to dump logfiles
o added tools/ham_recover - a tool to recover broken databases

Apr 28, 2011 - chris ---------------------------------------------------
o bugfix: when ham_open[_ex] or ham_env_open[_ex] return HAM_NEED_RECOVERY
    these functions deleted the logfiles by mistake. Fixed, and added
    a unittest to avoid regressions

Apr 27, 2011 - chris ---------------------------------------------------
o bugfix: after SMOs which affect the root page (i.e. a new root page is
    created) the header page is sometimes not written to the log file. This 
	can cause data loss after recovery (Thanks, Mark)

Apr 15, 2011 - chris ---------------------------------------------------
o bugfix: the cache was not purged correctly, thus grew uncontrolled
    (Thanks, Mark)

Mar 31, 2011 - chris ---------------------------------------------------
o bugfix: the hamzilla server always failed to read the configuration file 
    because of a wrong error check (Thanks, Sebastien)

Mar 28, 2011 - chris ---------------------------------------------------
o bugfix: when opening a database, and recovery is enabled, the 'threshold' 
    of the log files (which decides about the log file switching) was not 
    initialized correctly. (Thanks, Jake Sloan)

Feb 03, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.9

Feb 02, 2011 - chris ---------------------------------------------------