@@ -87,7 +87,7 @@
  * server then the following functions have to be used:
  * <table>
  * <tr><td>@ref ham_srv_init</td><td>Initializes the server</td></tr>
- * <tr><td>@ref ham_txn_commit</td><td>Adds an Environment to the
+ * <tr><td>@ref ham_srv_add_env</td><td>Adds an Environment to the
     server. The Environment with all its Databases will then be available
     remotely.</td></tr>
  * <tr><td>@ref ham_srv_close</td><td>Closes the server and frees all allocated
@@ -566,8 +566,8 @@ ham_env_create(ham_env_t *env, const char *filename,
  *            a given file at a given time. Deprecated - this is now the
  *            default
  *       <li>@ref HAM_ENABLE_RECOVERY</li> Enables logging/recovery for this
- *            Database. Not allowed in combination with @ref HAM_IN_MEMORY_DB, 
- *            @ref HAM_DISABLE_FREELIST_FLUSH and @ref HAM_WRITE_THROUGH.
+ *            Database. Not allowed in combination with @ref HAM_IN_MEMORY_DB 
+ *            and @ref HAM_DISABLE_FREELIST_FLUSH.
  *       <li>@ref HAM_ENABLE_TRANSACTIONS</li> Enables Transactions for this
  *            Database. 
  *            <b>Remark</b> Transactions were introduced in hamsterdb 1.0.4,
@@ -680,8 +680,7 @@ ham_env_open(ham_env_t *env, const char *filename, ham_u32_t flags);
  *       <li>@ref HAM_ENABLE_RECOVERY </li> Enables logging/recovery for this
  *            Database. Will return @ref HAM_NEED_RECOVERY, if the Database
  *            is in an inconsistent state. Not allowed in combination 
- *            with @ref HAM_IN_MEMORY_DB, @ref HAM_DISABLE_FREELIST_FLUSH 
- *            and @ref HAM_WRITE_THROUGH.
+ *            with @ref HAM_IN_MEMORY_DB and @ref HAM_DISABLE_FREELIST_FLUSH.
  *       <li>@ref HAM_AUTO_RECOVERY </li> Automatically recover the Database,
  *            if necessary. This flag implies @ref HAM_ENABLE_RECOVERY.
  *       <li>@ref HAM_ENABLE_TRANSACTIONS </li> Enables Transactions for this
@@ -1141,9 +1140,6 @@ ham_txn_begin(ham_txn_t **txn, ham_db_t *db, ham_u32_t flags);
 HAM_EXPORT ham_status_t
 ham_txn_commit(ham_txn_t *txn, ham_u32_t flags);
 
-/* Flag for @ref ham_txn_commit */
-#define HAM_TXN_FORCE_WRITE                                    1
-
 /**
  * Aborts a Transaction
  *
@@ -1236,9 +1232,12 @@ ham_create(ham_db_t *db, const char *filename,
  * @param flags Optional flags for opening the Database, combined with
  *        bitwise OR. Possible flags are:
  *      <ul>
- *       <li>@ref HAM_WRITE_THROUGH </li> Immediately write modified pages to 
- *            disk. This slows down all Database operations, but may
- *            save the Database integrity in case of a system crash.
+ *       <li>@ref HAM_WRITE_THROUGH </li> Flushes all file handles after
+ *            committing or aborting a Transaction using fsync(), fdatasync()
+ *            or FlushFileBuffers(). This file has no effect
+ *            if Transactions are disabled. Slows down performance but makes
+ *            sure that all file handles and operating system caches are 
+ *            transferred to disk, thus providing a stronger durability.
  *       <li>@ref HAM_USE_BTREE </li> Use a B+Tree for the index structure.
  *            Currently enabled by default, but future releases
  *            of hamsterdb will offer additional index structures,
@@ -1373,9 +1372,12 @@ ham_open(ham_db_t *db, const char *filename, ham_u32_t flags);
  *       <li>@ref HAM_READ_ONLY </li> Opens the file for reading only.
  *            Operations which need write access (i.e. @ref ham_insert) will
  *            return @ref HAM_DB_READ_ONLY.
- *       <li>@ref HAM_WRITE_THROUGH </li> Immediately write modified pages
- *            to the disk. This slows down all Database operations, but
- *            could save the Database integrity in case of a system crash.
+ *       <li>@ref HAM_WRITE_THROUGH </li> Flushes all file handles after
+ *            committing or aborting a Transaction using fsync(), fdatasync()
+ *            or FlushFileBuffers(). This file has no effect
+ *            if Transactions are disabled. Slows down performance but makes
+ *            sure that all file handles and operating system caches are 
+ *            transferred to disk, thus providing a stronger durability.
  *       <li>@ref HAM_DISABLE_VAR_KEYLEN </li> Do not allow the use of variable
  *            length keys. Inserting a key, which is larger than the
  *            B+Tree index key size, returns @ref HAM_INV_KEYSIZE.
