@@ -312,8 +312,14 @@ os_create(const char *filename, ham_u32_t flags, ham_u32_t mode, ham_fd_t *fd)
 ham_status_t
 os_flush(ham_fd_t fd)
 {
+    /* unlike fsync(), fdatasync() does not flush the metadata unless
+     * it's really required. it's therefore a lot faster. */
+#if HAVE_FDATASYNC
+    if (fdatasync(fd)==-1) {
+#else
     if (fsync(fd)==-1) {
-        ham_log(("fsync failed with status %u (%s)",
+#endif
+        ham_log(("fdatasync failed with status %u (%s)",
                 errno, strerror(errno)));
         return (HAM_IO_ERROR);
     }
